--- a/app/.env
+++ b/app/.env
@@ -1,4 +1,4 @@
 
 
-OPENAI_API_KEY=sk-b086d441930d420ea68063f072c0afa8
-OPENAI_BASE_URL=https://dashscope.aliyuncs.com/compatible-mode/v1
+OPENAI_API_KEY=''
+OPENAI_BASE_URL=''
